--- a/style2.css
+++ b/style2.css
@@ -1,48 +1,77 @@
 body{
-    background-attachment: #f6f6f6;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background:#f8f8f8 ;
 }
-#iconoblanco{
-    background-color: #efefef;
-    width: 30vw;
-    height: 30vw;
-    margin: 0 auto;
-    margin-top: 5vw;
-    border-radius: 5vw;
+.iconoazul{
+    position: relative;
+    width: 400px;
+    height: 400px;
+    background: #f2f2f2;
+    border-radius: 50px;
     box-shadow: 0 30px 20px #ccc,
-    0 30px 30px rgba(0, 0, 0, 0.25),
-    0 28px 0 rgba(0, 0, 0, 0.5),
-    0 50px 60px rgba(0, 0, 0, 0.1)
+    0 30px 30px rgba(0,0,0,0.25),
+    0 28px 0 rgba(0,0,0,0.5),
+    0 50px 60px rgba(0,0,0,0.1);
 }
-#iconoazul{
-    background-color: #1eabf6;
-    width: 25vw;
-    height: 25vw;
-    margin: 0 auto;
-    border-radius: 30vw;
-    margin-top: -28vw;
+.lineas{
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    inset: 35px;
+    background: linear-gradient(#1ec9ff, #2971e7);
+    border-radius: 50%;
+    box-shadow: 0 -5px 0 5px rgba(0,0,0,0.15) inset 0 10px 0 rgba(0,0,0,0.1);
 }
-.flechas{
-    width: 18vw;
-    height: 18vw;
-    transition: all;
-    transition-duration: 5s;
+.lineas span{
+    background: #f2f2f2;
+    position: absolute;
+    width: 2px;
+    height: 24px;
+    transform: translateY(-137.55px) rotate(calc(10deg*var(--i)));
+    transform-origin: 0px 150px;
+    filter: drop-shadow(2px 2px 1px rgba(0,0,0,0.15));
 }
-.flechas:hover{
-    transform: rotateZ(360deg);
+.lineas span::after{
+    background: #fff;
+    content: "";
+    position: absolute;
+    width: 2px;
+    height: 12px;
+    transform: rotate(5deg);
+    transform-origin: 0 150px;
 }
-#flecha1{
-    margin: auto;
-    width: 0; 
-    height: 0;
-    border-left: 1.2vw solid transparent;
-    border-right: 1.2 solid transparent;
-    border-bottom: 9vw solid red;
+.circulo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    width: 36px;
+    inset: 50px;
+    transform: translateX(130px) rotate(45deg);
+    filter: drop-shadow(0 0 4px rgba(0,0,0,0.25));
+    transition: 2s cubic-bezier(1,-0.39,0.5,1);
 }
-#flecha2{
-    margin: auto;
-    width: 0; 
-    height: 0;
-    border-left: 1.3vw solid transparent;
-    border-right: 1.2 solid transparent;
-    border-bottom: 9vw solid white;
+.circulo::before{
+    border-left: 18px solid transparent;
+    border-right: 18px solid transparent;
+    border-bottom: 150px solid rgb(231,51,51);
+    content: "";
+    position: absolute;
+    top: -150px;
+    height: 150px;
+}
+.circulo::after{
+    content: "";
+    border-bottom: 150px solid white;
+    border-left: 18px solid transparent;
+    border-right: 18px solid transparent;
+    top:-150px;
+    height: 150px;
+}
+.safari:hover .circulo{
+    transform: translateX(130px) rotate(405deg);
 }
